# studyflow

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: api_service.py  web_app.py
static/: script.js
tests/: test_task_manager.py
