[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "studyflow-cli"
version = "1.0.0"
description = "Aplicação CLI para organização de tarefas de estudo."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Arthur Neiva" }
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
